Added ui autocomplete
closes #61
